--- a/navigation/build.gradle
+++ b/navigation/build.gradle
@@ -28,13 +28,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
-    testImplementation 'junit:junit:4.13'
+    testImplementation "junit:junit:4.13"
     androidTestImplementation 'androidx.test:runner:1.2.0'
 
     implementation "androidx.core:core-ktx:1.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
-    implementation  "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:1.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
 }
